--- a/service.yaml
+++ b/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: nginx-deploy
+    app: nginx
   ports:
   - port: 80
     targetPort: 80
